--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,4 +1,3 @@
-
 platform :ios, '14.0'
 
 # CocoaPods analytics sends network stats, disable if you wish.
@@ -15,6 +14,10 @@ target 'Runner' do
   use_frameworks!
   use_modular_headers!
 
+  # Flutter Pods
+  flutter_application_path = '../'
+  load File.join(flutter_application_path, '.ios', 'Flutter', 'podhelper.rb')
+
   # Firebase dependencies
   pod 'Firebase/Core'
   pod 'Firebase/Analytics'
@@ -24,4 +27,10 @@ target 'Runner' do
 
   # Google Maps dependency
   pod 'GoogleMaps', '8.4.0'
+end
+
+post_install do |installer|
+  installer.pods_project.targets.each do |target|
+    flutter_additional_ios_build_settings(target)
+  end
 end
