Update app on GitHub: commit changes to TODO.md, ios/Podfile, and add ios/Flutter/podhelper.rb

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -16,7 +16,7 @@ target 'Runner' do
 
   # Flutter Pods
   flutter_application_path = '../'
-  load File.join(flutter_application_path, '.ios', 'Flutter', 'podhelper.rb')
+  load File.join(flutter_application_path, 'ios', 'Flutter', 'podhelper.rb')
 
   # Firebase dependencies
   pod 'Firebase/Core'
