fix: update Podfile and podhelper.rb for iOS build; remove GoogleMaps version constraint; update TODO

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -26,7 +26,7 @@ target 'Runner' do
   pod 'Firebase/Messaging'
 
   # Google Maps dependency
-  pod 'GoogleMaps', '8.4.0'
+  pod 'GoogleMaps'
 end
 
 post_install do |installer|
